# Biscuitcode

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  i18next-parser.config.cjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.claude/agents/: coder.md  planner.md  researcher.md  reviewer.md
.claude/commands/: plan.md  research.md  review-plan.md  run-all.md  run-phase.md
.github/workflows/: ci.yml  release.yml
docs/: CONVERSATION-EXPORT-SCHEMA.md  DEV-SETUP.md  ERROR-CATALOGUE.md  INSTALL.md  MORNING-BRIEF.md  PHASE-1-MERGE.md  PHASE-2-MERGE.md  PHASE-4-MERGE.md  PHASE-5-MERGE.md  PHASE-6-MERGE.md  PHASE-7-MERGE.md  PROGRESS.md  RELEASE.md  WORKSPACE.md  plan-r1.md  plan-r2.md  plan.md  research-r1.md  research-r2.md  research.md  v1.1-backlog.md  vision.md
docs/adr/: 0001-no-stronghold.md
docs/design/: AGENT-LOOP.md  CAPABILITIES.md  PROVIDER-TRAIT.md
docs/screenshots/: .gitkeep
packaging/icons/: biscuitcode-icon-concepts.html
scripts/: bootstrap-toolchain.sh  bootstrap-wsl.sh  check-i18n.js  render-icons.sh  test-all.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/biscuitcode-agent/: Cargo.toml
src-tauri/biscuitcode-agent/src/: lib.rs
src-tauri/biscuitcode-agent/src/executor/: confirmation.rs  mod.rs  snapshot.rs
src-tauri/biscuitcode-agent/src/tools/: apply_patch.rs  mod.rs  read_file.rs  run_shell.rs  search_code.rs  write_file.rs
src-tauri/biscuitcode-core/: Cargo.toml
src-tauri/biscuitcode-core/src/: errors.rs  lib.rs  palette.rs  secrets.rs
src-tauri/biscuitcode-db/: Cargo.toml
src-tauri/biscuitcode-db/src/: lib.rs  migrations.rs  queries.rs  types.rs
src-tauri/biscuitcode-db/src/migrations/: 0001_initial.sql
src-tauri/biscuitcode-lsp/: Cargo.toml
src-tauri/biscuitcode-lsp/src/: lib.rs
src-tauri/biscuitcode-providers/: Cargo.toml
src-tauri/biscuitcode-providers/src/: lib.rs  trait.rs  types.rs
src-tauri/biscuitcode-providers/src/anthropic/: mod.rs
src-tauri/biscuitcode-providers/src/ollama/: mod.rs
src-tauri/biscuitcode-providers/src/openai/: mod.rs
src-tauri/biscuitcode-pty/: Cargo.toml
src-tauri/biscuitcode-pty/src/: lib.rs
src-tauri/capabilities/: core.json  fs.json  http.json  shell.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  chat.rs  conversations.rs  fs.rs  git.rs  lsp.rs  mod.rs  ollama.rs  terminal.rs  update.rs
src/components/: ActivityBar.tsx  AgentActivityPanel.tsx  ChatPanel.tsx  CommandPalette.tsx  ConfirmationModal.tsx  EditorArea.tsx  GitPanel.tsx  InlineEditPane.tsx  OnboardingModal.tsx  PreviewPanel.tsx  SettingsPage.tsx  SettingsProviders.tsx  SidePanel.tsx  StatusBar.tsx  TerminalPanel.tsx  ToastLayer.tsx
src/errors/: ErrorToast.tsx  types.ts
src/layout/: WorkspaceGrid.tsx
src/locales/: en.json
src/lsp/: lspClient.ts
src/shortcuts/: global.ts
src/state/: agentStore.ts  editorStore.ts  lspStore.ts  panelsStore.ts
src/theme/: fonts.css  themes.ts  tokens.ts
tests/: a11y.spec.tsx  cold-launch.sh  error-catalogue.spec.ts  phase0-env-check.sh  provider-event-shape.spec.ts  ttft-bench.ts
tests/e2e/: agent-mode-demo.spec.ts  agent-tool-card-render.spec.ts
tests/fixtures/: canonical-tool-prompt.md
tests/shortcuts/: global.spec.ts
tests/unit/: agent-activity-panel.spec.tsx  agent-event-bridge.spec.ts  agentStore.spec.ts  editorStore.spec.ts  error-codes-distinct.spec.ts  lspClient.spec.ts  phase7.spec.tsx  phase8.spec.tsx
