# biscuitcode-lsp — language-server child management.
#
# Phase 7 deliverable. Spawns one LSP per (language, workspace) pair,
# proxies stdio JSON-RPC frames to the frontend via Tauri events, and
# detects missing language servers (catalogue E013).
#
# Frontend wires `monaco-languageclient` with custom MessageTransports
# that send/receive over Tauri events keyed by SessionId.

[package]
name = "biscuitcode-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Language-server child management + JSON-RPC stdio proxy."
publish = false

[dependencies]
biscuitcode-core = { path = "../biscuitcode-core" }

# Async + child process management.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }

# Serialization for the LSP JSON-RPC framing layer.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrent session map.
parking_lot = "0.12"

# PATH lookup for LSP binary detection.
which = "7"

# IDs
ulid = { version = "1", features = ["serde"] }

# Errors
thiserror = "1.0"

# Logging
tracing = "0.1"

[lib]
name = "biscuitcode_lsp"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
